# service-peso-tugma-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/routes/: auth.py  users.py
app/api/v1/routes/auth/: __init__.py  auth_routes.py  auth_schemas.py  auth_service.py
app/api/v1/routes/health/: __init__.py
app/api/v1/routes/me/: __init__.py  me_routes.py
app/api/v1/routes/users/: __init__.py  users_models.py  users_routes.py  users_schemas.py  users_service.py
app/api/v1/routes/workspaces/: __init__.py  workspaces_models.py  workspaces_routes.py  workspaces_schemas.py  workspaces_service.py
app/core/: config.py  logging.py  security.py
app/db/: mongodb.py
app/models/: user.py
app/schemas/: user.py
app/services/: user_service.py
tests/: conftest.py  test_health.py
